x11: Don't force QT_NO_GLIB=1

This breaks certain apps, e.g. KDE System Settings when launched from
overview effect.

BUG: 460980


(cherry picked from commit c2b4f03f9671c0ad9fc1929426df5f79db414aa7)